@@ -4,18 +4,28 @@ Hash: SHA256
 AUX channel.xml 807 SHA256 5a195844621966aecf66b68de514bada2024cf945e8a44835e4d92ea4ef751ed SHA512 4b1e3537225621a419ee516d1252394e34201feac5dffa49c21204a3b2314be9f924ecec20fe9d99d386728e4497795658e70e2a9398a778c1ef5bad53c9f7b2 WHIRLPOOL 792095d15b1220b3f62953051dfcb88d526ed89aecdadcabd8564fd90af7324936053b7726dcd68c4bbd0635342e9692a87f23f2143f64805e01a42c3ab2536e
 DIST phpDocumentor-2.3.0.tgz 17137438 SHA256 1b093f41ecadb0c541a9adb6dc520d4fe06eaf0a6c74a752ffe5e7bff63b751a SHA512 74ad4329d90e71a76977a38ed39dfeff33f557d68a1393f834f2eeb5d4b5e880a4b1813ecb1f4edff638fc5633a3a4b4c7156c5c6cb15e755db283780305c435 WHIRLPOOL 1b14119cbeb21f0887401423ddf50b6afdc379a433ad09db1229d8e53f7e7312df64055d69932d21deec1b3842c3cab78afe5212f7cd6eb1c9ebd8102acc3895
 DIST phpDocumentor-2.7.0.tgz 16118916 SHA256 4d0acb78e6233990595461b70f11db66d91fd38d4e8de5616b788db104caa746 SHA512 068f2470f73ea6940077c23f5565e737d6065e881b9d1456fc617b00c285cc2358773afc16e97e3d9403b5caaaa32a9dcd360bfc91decf349f4b100fee4a9129 WHIRLPOOL 29833d4cdf28f13bb4c78d3d9cb6a6c28acb9a60a1adfa5e6d30b4768afcec157aaecb32b85a75953e987bbda98d717076ebcc723c344af67f4ec32339fe7ba1
+DIST phpDocumentor-2.8.2.phar 33079646 SHA256 1f055bd562b7a209c4f89e865e653576b10a239880e55f423df02ecba4d48c53 SHA512 ef47483147358d423595d6c771971481b99338adeed0f2742ab6856925d3a1d501d4e786aab75cba5dc2306728aef6bf8fc4cfd8ea35d5d9c903f1afa5695c2a WHIRLPOOL c5b551dc3fbcd6b347b24a77ca7378e4301bcbf738f210a0f4b1a0b18d279028787a331c6274963b7c3f7749dba9d4f1993747cebd0be4531add3bce8954f665
 EBUILD phpDocumentor-2.3.0.ebuild 765 SHA256 841f7f3c78061d07f1cd7db7cf15fa4a0e7fa9838843a3c51447fddf5f928d86 SHA512 3e43a4fb6b5dbce9865268c341cdc32e4035d8d1b6fcae399e5d12fff4a81c2460de9d7b425a853cd18381c8c84b27eac02c01c10e188d1bbb3c74d809bade17 WHIRLPOOL 2fe6233bf78f26fd7fb037247cfa098636e04d5813f8012b0af530ca4a6fbcc614d6e338be933ba7db1b89b923f75f279aafbfc44071b1a2706cac386f723a61
 EBUILD phpDocumentor-2.7.0.ebuild 777 SHA256 d2d35cda0ebebfa6df1bbcde829749d2d866e1650869731fc836b777b3a6944d SHA512 dbfac9cbd94bc085015652000922342ee955164c66f86eac90567e59307b94f9f59959ef64a8109c4241ee57d27e39cc76dc25b2f6c19d7b51f277007b0a16a0 WHIRLPOOL 35496150a79abde44cb9c3be00b4a55576418b6e969b0ac1a19627e4c5225d7a8def3f33bae0a9b6fc104c5d30212b224fa93915519d3f9c13bc239805e49144
-MISC ChangeLog 1067 SHA256 ee79dc5ad0b00c61af65a7d986e43e52c9d3da970da6da67e9d2013f1cd2cee2 SHA512 7526c398875d79f69948b6f17e9134e05186423fb882450e824cdf06a58078d660bb65d1399bb4a0c41de24ae90239f87599d4b577019a666eaab938eb02b686 WHIRLPOOL 6f00e1170249ae4538a13d47c3db0f428a7037a0463ee0855d44698384b4c7cff77a9dd75a4b582bb6c1d53ab56ac4cedd477d6272007c887cee2e626dcf582d
+EBUILD phpDocumentor-2.8.2.ebuild 928 SHA256 b2bbb38abdd2253cc22d7e25336af511d17720f61e1576b51e1870ba76803759 SHA512 b2dc890e67cfc20e9ff8abf477ede1f3b2a5bb7818758f45d465ab6a8d883f3912d21ba069a5283d43812f28ba3583667f0211c9bc4a35a85b4135f832df14e2 WHIRLPOOL 8799b05f7d6616d6970c9a6f81bd4652e616c0d3b44a9c5a3bde395924f17a94c0ce5a0d6e09735b4323b104d613a82005dbae84346e3eb1c20662cd16c58f6a
+MISC ChangeLog 1230 SHA256 a7bb17955f10d04cd224ef4cd23b7d1c59a8c2dbd08092d1c5e6cc02cd854081 SHA512 6039d279b97b66648e17f1702af058b29f88be48a1891ca8635697e92da340ad2f013a211cbaf69da0222d9ab8bba619bdbec8b49f8badb7e4bc5facb66807c8 WHIRLPOOL edf12cb38902b6d07577cddf5048e516896aa4757a4858225a5ce26ade566cbfa8df190f80592e7824c7b8d9c1f129f352148231043aa36c0983bf814d68e103
 MISC metadata.xml 156 SHA256 f6d70434415ff7294f2a64e7870f32318c5fab9153fe63a58841b12d897da6ba SHA512 c15813e9ecae01488222d09140617eaf0e6e9b9b9d40412e1cda7838e64c8fb8c73c030dc90d723aea571acadddb76941c9a620fc4e554ba052ace1cc6b0ef79 WHIRLPOOL 1b1513674a388e3e95e09cfd70996bc98fc058ca0e0e7c5dc63e0b3389bedeb4dc16b55245b92a8ded7390cca0dc481e418f236a236ded9afcc2ef3845b25130
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iQEcBAEBCAAGBQJUN+qvAAoJEE4V4vFnx44dYooH/iHzvZ3/s7LvR5/hCGkLBxVi
-y7fFFrdpOeZexRWYI2QWMvrsoNIfhFTGBOQAbPkh4c7tk4oJBZYLuDBNyNsdIkLG
-GbJ4et/Yk0g9A9ejajELpp1esQCAuo7J+FKlYqdjvF3u7chXe12SBjKYRMZzbvfB
-1GTRAcWR83oZGjgWxKp2S8k7pJKr79bQnWwPzqZbL5t1UVKmdtTuU3Ph+iAbkRWK
-Ev+CQ9XFd7jqYTV9YTPyawQwPFE0gh2fqIJOwHlbQ7z4dy/Ykn7Mc0f2G6fvfsh5
-k92Rw0HI8aBtjttLcIKi2Q64heZp865EfaFE/wQgBF7GU9tiHIRWjZl02wPpLEc=
-=lNXr
+iQJ8BAEBCABmBQJVSAq9XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2NkMyRTQ0RUQ5MEUzMjc1OEU3RDU1QzBE
+MUY3ODFFRkY5RjRBM0I2AAoJENH3ge/59KO28jIQAJLhsRpUbt6crFb+06wBXRLx
+TrSiOs+xS3qtUR3XFPPV8Z41rxw3b3RIHQWyeonEYqOkfBZvOjebk3AgHJGHPLNU
+fPlsN+7QMHOmErhuWBtSgZdj9VVDbohIYtKf1rWyNFp3Q2fhkNcIKuqfdrNyoj3G
+QxI+nvmMgdiyCdUzsf1oex6hMWNuoOIynpUIE15HPU3RLmrlIYVeMyPkeK213w4p
+1qDp9yEYwly9xMCF62IHnIBu/iTuyGwqLPVmC3Qlz4bxe6qngmHfzn+InSDjCb5d
+AENbrEZLzEikjhf6ZkfZ/eus8ayERn/2uGnQkn57rb2/1frM/rikGM0j4gWApLRZ
+OMcCIzECbisNXsvbpaJWuG5vUCSq2WD4q6g7T3WnUhD1p5aLa1AATm6OKwADDhJS
+VNYfPp/9f472x41GS8vbI0zgF+R6C80A8lDoSfxfgzCoKdwzFo34L92xB06TEm3n
+dRY9xY55CgJRIVibqBgsNVMieCG+cnFbG+jNnX9K7RQBEvKWJKjtt7C6yT8soX02
+Qa1Cifmd4eCijcLTInf1ES4IqerkdmFoPjMF47X8qlw3L1jU+ksXI50I9DX+7ozu
+hRJX69pYfQbwcIAU3VqBKd3r+F6a1AJvmrl7nU4DGEWuycAuvK/y9C+aEC8gdVnI
+9FKO6ErKWd5+h2Tz1aSa
+=xWPE
 -----END PGP SIGNATURE-----
