@@ -1,0 +1,11 @@
+DEFINED_PHASES=install unpack
+DEPEND=!dev-php/PEAR-PhpDocumentor
+DESCRIPTION=The phpDocumentor package provides automatic documenting of php api directly from the source
+EAPI=5
+HOMEPAGE=http://phpdoc.org
+KEYWORDS=~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86
+LICENSE=MIT
+RDEPEND=media-gfx/graphviz dev-lang/php:*[cli,iconv,intl,phar,xmlreader,xslt]
+SLOT=0
+SRC_URI=https://github.com/phpDocumentor/phpDocumentor2/releases/download/v2.8.2/phpDocumentor.phar -> phpDocumentor-2.8.2.phar
+_md5_=3b715e5f71e0d0616d550ad4e658bf34
